# llm-chain-eval

./: .gitignore  README.md  app.py  config.py  evaluate.py  pyproject.toml  requirements.txt  sample_text.txt  sample_validation.txt
