[tool.poetry]
name = "llm-chain-eval"
version = "0.1.0"
description = ""
authors = ["Makoto Tanji <tanji.makoto@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_agent_eval"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
langchain = "^0.0.148"
python-dotenv = "^1.0.0"
openai = "^0.27.4"
google-search-results = "^2.4.2"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.4"
wikipedia = "^1.4.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
